Finetuning System Prototype #2

--- a/research/finetuning.ipynb
+++ b/research/finetuning.ipynb
@@ -17,21 +17,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a764d3b5",
+   "execution_count": 1,
+   "id": "39a349f8",
    "metadata": {},
    "outputs": [],
    "source": [
     "from transformers import AutoTokenizer, AutoModelForCausalLM, BitsAndBytesConfig, TrainingArguments\n",
     "from peft import prepare_model_for_kbit_training, LoraConfig, get_peft_model\n",
-    "from datasets import load_dataset\n",
     "from trl import SFTTrainer\n",
-    "import torch"
+    "import torch\n",
+    "\n",
+    "from utils import load_dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "aa44111c",
    "metadata": {},
    "outputs": [],
@@ -45,6 +46,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0f666758",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = load_dataset('../data/data_01_processed.csv')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "093c1d89",
    "metadata": {},
@@ -54,16 +65,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "39a349f8",
+   "execution_count": 4,
+   "id": "e534daf4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from transformers import AutoTokenizer, AutoModelForCausalLM, BitsAndBytesConfig, TrainingArguments\n",
-    "from peft import prepare_model_for_kbit_training, LoraConfig, get_peft_model\n",
-    "from datasets import load_dataset\n",
-    "from trl import SFTTrainer\n",
-    "import torch"
+    "torch.cuda.is_available()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "cce4ac7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cuda.device_count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b58683bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'NVIDIA GeForce RTX 4060 Laptop GPU'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cuda.get_device_name(0)"
    ]
   },
   {
@@ -73,30 +133,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_name = \"meta-llama/Llama-2-7b-hf\"\n",
+    "model_name = \"meta-llama/Llama-3.2-3B\"\n",
     "\n",
     "compute_dtype = getattr(torch, \"float16\")\n",
-    "bnb_config = BitsAndBytesConfig(load_in_4bit=True,\n",
+    "bnb_config = BitsAndBytesConfig(\n",
+    "            load_in_4bit=True,\n",
     "            bnb_4bit_quant_type=\"nf4\",\n",
     "            bnb_4bit_compute_dtype=compute_dtype,\n",
-    "            bnb_4bit_use_double_quant=True,\n",
-    ")\n",
-    "model = AutoModelForCausalLM.from_pretrained(model_name,quantization_config=bnb_config, device_map={\"\": 0})\n",
-    "model = prepare_model_for_kbit_training(model)\n",
+    "            bnb_4bit_use_double_quant=True,)\n",
+    "# model = AutoModelForCausalLM.from_pretrained(model_name, quantization_config=bnb_config, device_map={\"\": 0})\n",
+    "# model = prepare_model_for_kbit_training(model)\n",
     "\n",
-    "tokenizer = AutoTokenizer.from_pretrained(model_name, use_fast=True, add_eos_token=True)\n",
-    "tokenizer.pad_token = tokenizer.unk_token\n",
-    "tokenizer.padding_side = \"left\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2f8486e2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset = load_dataset(\"kaitchup/opus-French-to-English\")"
+    "# tokenizer = AutoTokenizer.from_pretrained(model_name, use_fast=True, add_eos_token=True)\n",
+    "# tokenizer.pad_token = tokenizer.unk_token\n",
+    "# tokenizer.padding_side = \"left\""
    ]
   },
   {
@@ -107,13 +157,12 @@
    "outputs": [],
    "source": [
     "peft_config = LoraConfig(\n",
-    "            lora_alpha=16,\n",
-    "            lora_dropout=0.05,\n",
-    "            r=16,\n",
-    "            bias=\"none\",\n",
-    "            task_type=\"CAUSAL_LM\",\n",
-    "            target_modules= [\"down_proj\",\"up_proj\",\"gate_proj\"]\n",
-    ")"
+    "    lora_alpha=16,\n",
+    "    lora_dropout=0.05,\n",
+    "    r=16,\n",
+    "    bias=\"none\",\n",
+    "    task_type=\"CAUSAL_LM\",\n",
+    "    target_modules= [\"down_proj\",\"up_proj\",\"gate_proj\"])"
    ]
   },
   {
@@ -124,7 +173,7 @@
    "outputs": [],
    "source": [
     "training_arguments = TrainingArguments(\n",
-    "        output_dir=\"./results/\",\n",
+    "        output_dir=\"../data/results/\",\n",
     "        evaluation_strategy=\"steps\",\n",
     "        optim=\"paged_adamw_8bit\",\n",
     "        save_steps=500,\n",
@@ -160,7 +209,6 @@
     "        tokenizer=tokenizer,\n",
     "        args=training_arguments\n",
     ")\n",
-    "\n",
     "trainer.train()"
    ]
   }
