--- a/labeling/labeling.ipynb
+++ b/labeling/labeling.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "da45e88c",
    "metadata": {},
    "outputs": [],
@@ -25,15 +25,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f0f3b892",
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "\n",
-    "raw_texts_en_path = '../data/raw_texts_en.json'\n",
-    "raw_texts_vi_path = '../data/raw_texts_vi.json'\n",
+    "with open('alignment_prompt.txt', 'r') as f:\n",
+    "    alignment_prompt = f.read()\n",
+    "\n",
+    "raw_texts_en_path = '../data/raw_texts_en_02.json'\n",
+    "raw_texts_vi_path = '../data/raw_texts_vi_02.json'\n",
     "\n",
     "raw_texts_en = []\n",
     "raw_texts_vi = []\n",
@@ -46,17 +49,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e5ab5537",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('alignment_prompt.txt', 'r') as f:\n",
-    "    alignment_prompt = f.read()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "4607ea9f",
    "metadata": {},
@@ -66,28 +58,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8041a26a",
    "metadata": {},
    "outputs": [],
    "source": [
     "en_segmentations = [2, 5, 10, 17, 18, 25, 30, 34, 37, 39, 43, 44, 48, 49, 53, 54, 56, 58, 63, 64, 66, 73, 77, 81, 86, 87, 87]\n",
     "vi_segmentations = [3, 7, 13, 20, 22, 30, 37, 41, 45, 48, 52, 53, 58, 60, 65, 66, 69, 71, 78, 80, 81, 90, 95, 98, 105, 106, 106]\n",
-    "\n",
-    "en_segmentations_test = [2, 5, 10]\n",
-    "vi_segmentations_test = [3, 7, 13]\n",
-    "\n",
     "assert len(en_segmentations) == len(vi_segmentations)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c23f9400",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 26/26 [07:07<00:00, 16.45s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "from tqdm import tqdm\n",
+    "\n",
+    "aligned_data = []\n",
     "\n",
     "def get_texts_in_range(raw_texts, start_page, end_page):\n",
     "    return \" \".join(\n",
@@ -95,14 +93,34 @@
     "        if start_page <= entry['page_id'] <= end_page\n",
     "    )\n",
     "\n",
-    "for i in tqdm(range(len(en_segmentations_test) - 1)):\n",
-    "    en_range = (en_segmentations_test[i], en_segmentations_test[i + 1])\n",
-    "    vi_range = (vi_segmentations_test[i], vi_segmentations_test[i + 1])\n",
+    "for i in tqdm(range(len(en_segmentations) - 1)):\n",
+    "    en_range = (en_segmentations[i], en_segmentations[i + 1])\n",
+    "    vi_range = (vi_segmentations[i], vi_segmentations[i + 1])\n",
     "    \n",
     "    texts_en_curr = get_texts_in_range(raw_texts_en, *en_range)\n",
     "    texts_vi_curr = get_texts_in_range(raw_texts_vi, *vi_range)\n",
     "    prompt = alignment_prompt.format(en_text=texts_en_curr, vi_text=texts_vi_curr)\n",
-    "    print(prompt)"
+    "    response = openai_client.generate_response(prompt)\n",
+    "    sentence_pair = [x for x in response[0].split('\\n') if len(x) > 5]\n",
+    "    for pair in sentence_pair:\n",
+    "        try:\n",
+    "            en_text, vi_text = pair.split(\" ---> \", 1)\n",
+    "            aligned_data.append({'en': en_text.strip(), 'vi': vi_text.strip()})\n",
+    "        except ValueError:\n",
+    "            continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f76a9f66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df_aligned = pd.DataFrame(aligned_data)\n",
+    "df_aligned.to_excel('../data/output_02.xlsx', index=False)"
    ]
   }
  ],
