Finetuning System Prototype #3

--- a/research/finetuning.ipynb
+++ b/research/finetuning.ipynb
@@ -23,7 +23,7 @@
    "outputs": [],
    "source": [
     "from transformers import AutoTokenizer, AutoModelForCausalLM, BitsAndBytesConfig, TrainingArguments\n",
-    "from peft import prepare_model_for_kbit_training, LoraConfig, get_peft_model\n",
+    "from peft import prepare_model_for_kbit_training, LoraConfig\n",
     "from trl import SFTTrainer\n",
     "import torch\n",
     "\n",
@@ -66,72 +66,24 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e534daf4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "torch.cuda.is_available()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "cce4ac7c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "torch.cuda.device_count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "b58683bb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'NVIDIA GeForce RTX 4060 Laptop GPU'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "torch.cuda.get_device_name(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "1413cffb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "36385c75a85f465f9da9f9e9e4a414ef",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "model_name = \"meta-llama/Llama-3.2-3B\"\n",
     "\n",
@@ -141,17 +93,17 @@
     "            bnb_4bit_quant_type=\"nf4\",\n",
     "            bnb_4bit_compute_dtype=compute_dtype,\n",
     "            bnb_4bit_use_double_quant=True,)\n",
-    "# model = AutoModelForCausalLM.from_pretrained(model_name, quantization_config=bnb_config, device_map={\"\": 0})\n",
-    "# model = prepare_model_for_kbit_training(model)\n",
+    "model = AutoModelForCausalLM.from_pretrained(model_name, quantization_config=bnb_config, device_map={\"\": 0})\n",
+    "model = prepare_model_for_kbit_training(model)\n",
     "\n",
-    "# tokenizer = AutoTokenizer.from_pretrained(model_name, use_fast=True, add_eos_token=True)\n",
-    "# tokenizer.pad_token = tokenizer.unk_token\n",
-    "# tokenizer.padding_side = \"left\""
+    "tokenizer = AutoTokenizer.from_pretrained(model_name, use_fast=True, add_eos_token=True)\n",
+    "tokenizer.pad_token = tokenizer.unk_token\n",
+    "tokenizer.padding_side = \"left\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c269a58c",
    "metadata": {},
    "outputs": [],
@@ -159,7 +111,7 @@
     "peft_config = LoraConfig(\n",
     "    lora_alpha=16,\n",
     "    lora_dropout=0.05,\n",
-    "    r=16,\n",
+    "    r=8,\n",
     "    bias=\"none\",\n",
     "    task_type=\"CAUSAL_LM\",\n",
     "    target_modules= [\"down_proj\",\"up_proj\",\"gate_proj\"])"
@@ -174,20 +126,20 @@
    "source": [
     "training_arguments = TrainingArguments(\n",
     "        output_dir=\"../data/results/\",\n",
-    "        evaluation_strategy=\"steps\",\n",
+    "        eval_strategy=\"steps\",\n",
     "        optim=\"paged_adamw_8bit\",\n",
-    "        save_steps=500,\n",
+    "        save_steps=250,\n",
     "        log_level=\"debug\",\n",
-    "        logging_steps=500,\n",
+    "        logging_steps=250,\n",
     "        learning_rate=1e-4,\n",
-    "        eval_steps=500,\n",
+    "        eval_steps=250,\n",
     "        fp16=True,\n",
     "        do_eval=True,\n",
-    "        per_device_train_batch_size=96,\n",
-    "        per_device_eval_batch_size=96,\n",
+    "        per_device_train_batch_size=16,\n",
+    "        per_device_eval_batch_size=16,\n",
     "        #gradient_accumulation_steps=1,\n",
     "        warmup_steps=100,\n",
-    "        max_steps=3000,\n",
+    "        max_steps=500,\n",
     "        lr_scheduler_type=\"linear\"\n",
     ")"
    ]
@@ -197,20 +149,38 @@
    "execution_count": null,
    "id": "9e355776",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "SFTTrainer.__init__() got an unexpected keyword argument 'max_seq_length'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m trainer = \u001b[43mSFTTrainer\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m      2\u001b[39m \u001b[43m    \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m=\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[43m    \u001b[49m\u001b[43mtrain_dataset\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdataset\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mtrain\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      4\u001b[39m \u001b[43m    \u001b[49m\u001b[43meval_dataset\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdataset\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mvalidation\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[43m    \u001b[49m\u001b[43mpeft_config\u001b[49m\u001b[43m=\u001b[49m\u001b[43mpeft_config\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;66;43;03m# dataset_text_field=\"text\",\u001b[39;49;00m\n\u001b[32m      7\u001b[39m \u001b[43m    \u001b[49m\u001b[43mmax_seq_length\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m120\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m      8\u001b[39m \u001b[43m    \u001b[49m\u001b[43mprocessing_class\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtokenizer\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      9\u001b[39m \u001b[43m    \u001b[49m\u001b[43margs\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtraining_arguments\u001b[49m\n\u001b[32m     10\u001b[39m \u001b[43m)\u001b[49m\n\u001b[32m     11\u001b[39m trainer.train()\n",
+      "\u001b[31mTypeError\u001b[39m: SFTTrainer.__init__() got an unexpected keyword argument 'max_seq_length'"
+     ]
+    }
+   ],
    "source": [
     "trainer = SFTTrainer(\n",
-    "        model=model,\n",
-    "        train_dataset=dataset['train'],\n",
-    "        eval_dataset=dataset['validation'],\n",
-    "        peft_config=peft_config,\n",
-    "        dataset_text_field=\"text\",\n",
-    "        max_seq_length=120,\n",
-    "        tokenizer=tokenizer,\n",
-    "        args=training_arguments\n",
+    "    model=model,\n",
+    "    train_dataset=dataset['train'],\n",
+    "    eval_dataset=dataset['validation'],\n",
+    "    peft_config=peft_config,\n",
+    "    processing_class=tokenizer,\n",
+    "    args=training_arguments\n",
     ")\n",
     "trainer.train()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2b0cf80",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
